--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -11,7 +11,7 @@
          syntaxCheck="false"
 >
     <testsuites>
-        <testsuite name="Nisbet LaravelMarkdown Test Suite">
+        <testsuite name="RMPEnterprise LaravelMarkdown Test Suite">
             <directory>./tests/</directory>
         </testsuite>
     </testsuites>
